--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My web portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
-<body>
-    <header>
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Ro<samp class="text-primary">k</samp>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+         <div class="banner">
+            <div class="banner-content">
+                 <h4 class="banner-title1 dark-2">Hi, I am</h4>
+                 <h1 class="banner-title2">Rakibul Islam Roky</h1>
+                 <p class="banner-description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, aut accusamus! Laboriosam laudantium, quis soluta placeat odit cupiditate hic itaque doloribus porro inventore. 
+                 </p>
+                 <button class="btn-primary">Download CV</button>
+                 <button class="btn-primary">Contact</button>
 
+            </div>
+            <img class="banner-prfile-pic" src="image/rroky.png" alt="">
+         </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
