--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secoundary-bg">
         <nav>
             <h3 class="nav-title">Ro<samp class="text-primary">k</samp>y</h3>
             <ul>
@@ -24,7 +24,7 @@
                  <h4 class="banner-title1 dark-2">Hi, I am</h4>
                  <h1 class="banner-title2">Rakibul Islam Roky</h1>
                  <p class="banner-description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, aut accusamus! Laboriosam laudantium, quis soluta placeat odit cupiditate hic itaque doloribus porro inventore. 
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                  </p>
                  <button class="btn-primary">Download CV</button>
                  <button class="btn-primary">Contact</button>
@@ -34,7 +34,32 @@
          </div>
     </header>
     <main>
-
+         <section class="about secoundary-bg">
+              <h3 class="section-title">About Me</h3>
+              <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+              </p>
+              <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.item-description -->
+                 <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Rakibul Islam Roky</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">mdrakibulislamroky298@gmail.com</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">Date Of Birth</p>
+                    <p class="item-description">14 Aug 2001</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Pabna</p>
+                 </div>
+              </div>
+    
+         </section>
     </main>
     <footer>
 
